<resources>
    <string name="app_name">ParkApp</string>
    <string name="splash_welcome">ParkApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name = "history_name">History</string>
    <string name ="info">Info</string>
    <string name ="settings">Impostazioni</string>
    <string name="action_settings">Settings</string>
    <string name="label_button_save">Salva</string>
    <string name="label_button_find">Trova</string>
    <string name="label_button_config">Config</string>
    <string name="spinner_park_types_textview">Tipo Posteggio</string>
    <string name="time_picker_textview">Scadenza</string>
    <string name="label_button_nearby_parks">Nearby</string>
    <string name="dialog_title">Configura Parcheggio</string>
    <string name="button_delete">Cancella parcheggio</string>
    <string name="android_studio">Il tuo Park</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string-array name="park_types">
        <item>Gratuito</item>
        <item>Disco Orario</item>
        <item>Parchimetro</item>
    </string-array>

    <string name="pref_notification_title">Tipologia notifiche</string>
    <string name="pref_notification_summary">
        \"Doppia notifica\" invia un secondo avviso a metà del tempo rimanente dalla ricezione del primo
    </string>
    <string name="pref_notification_dialog_title">Tipologia notifiche</string>

    <string-array name="pref_notification_keys">
        <item>Nessuna</item>
        <item>Singola notifica</item>
        <item>Doppia notifica</item>
    </string-array>

    <string-array name="pref_notification_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_notification_default">2</string>
    <string name="pref_period_notification_title">Promemoria scadenza parcheggio</string>
    <string name="pref_period_notification_summary">
        Indicare a quanti minuti dalla fine del parcheggio si desidera ricevere la prima notifica
    </string>
    <string name="pref_period_notification_dialog_title">Promemoria scadenza parcheggio</string>

    <string-array name="pref_period_notification_keys">
        <item>30 minuti</item>
        <item>20 minuti</item>
        <item>15 minuti</item>
        <item>10 minuti</item>
        <item>5 minuti</item>
    </string-array>

    <string-array name="pref_period_notification_values">
        <item>30</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
        <item>5</item>
    </string-array>

    <string name="pref_period_notification_default">30</string>

    <string name="pref_ringing_title">Allarme</string>
    <string name="pref_ringing_summary">
        Scegliere se la seconda notifica attiva l\'allarme (squillo del telefono)
    </string>

    <string name = "info_relatore">Relatore</string>
    <string name = "nome_relatore">Alessio Merlo</string>

    <string name = "info_sviluppatori">Sviluppatori  </string>
    <string name = "nomi_sviluppatori">
        Bernardi Edoardo\n
        Pastore Niko\n
        Remus Alberto
    </string>

</resources>
