<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_notification"
        android:title="@string/pref_notification_title"
        android:summary="@string/pref_notification_summary"
        android:dialogTitle="@string/pref_notification_dialog_title"
        android:entries="@array/pref_notification_keys"
        android:entryValues="@array/pref_notification_values"
        android:defaultValue="@string/pref_notification_default" />
    <ListPreference
        android:key="pref_period_notification"
        android:title="@string/pref_period_notification_title"
        android:summary="@string/pref_period_notification_summary"
        android:dialogTitle="@string/pref_period_notification_dialog_title"
        android:entries="@array/pref_period_notification_keys"
        android:entryValues="@array/pref_period_notification_values"
        android:defaultValue="@string/pref_period_notification_default" />
</PreferenceScreen>